--- a/app.json
+++ b/app.json
@@ -8,5 +8,6 @@
     "navigationBarTextStyle": "black",
     "navigationStyle": "default",
     "backgroundColor": "#ffffff"
-  }
+  },
+  "sitemapLocation": "sitemap.json"
 }
