--- a/app.json
+++ b/app.json
@@ -1,6 +1,13 @@
 {
   "pages": [
-    "pages/classic/classic"
+    "pages/classic/classic",
+    "components/classic/music/index",
+    "pages/book/book",
+    "pages/my/my",
+    "pages/book-detail/book-detail"
+  ],
+  "requiredBackgroundModes": [
+    "audio"
   ],
   "window": {
     "navigationBarBackgroundColor": "#ffffff",
@@ -9,5 +16,30 @@
     "navigationStyle": "default",
     "backgroundColor": "#ffffff"
   },
-  "sitemapLocation": "sitemap.json"
+  "sitemapLocation": "sitemap.json",
+  "tabBar": {
+    "selectedColor": "#000000",
+    "backgroundColor": "ffffff",
+    "color": "#c7c7c7",
+    "list": [
+      {
+        "selectedIconPath": "/images/tab/classic@highlight.png",
+        "pagePath": "pages/classic/classic",
+        "text": "流行",
+        "iconPath": "/images/tab/classic.png"
+      },
+      {
+        "selectedIconPath": "/images/tab/book@highlight.png",
+        "pagePath": "pages/book/book",
+        "text": "书籍",
+        "iconPath": "/images/tab/book.png"
+      },
+      {
+        "selectedIconPath": "/images/tab/my@highlight.png",
+        "pagePath": "pages/my/my",
+        "text": "喜欢",
+        "iconPath": "/images/tab/my.png"
+      }
+    ]
+  }
 }
